@@ -1,41 +1,12 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.java.decompiler.main;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Map.Entry;
 
 import org.jetbrains.java.decompiler.code.CodeConstants;
 import org.jetbrains.java.decompiler.main.ClassesProcessor.ClassNode;
 import org.jetbrains.java.decompiler.main.extern.IFernflowerPreferences;
 import org.jetbrains.java.decompiler.main.rels.ClassWrapper;
 import org.jetbrains.java.decompiler.main.rels.MethodWrapper;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.AssignmentExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.ConstExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.ExitExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.Exprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.FieldExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.FunctionExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.InvocationExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.NewExprent;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.VarExprent;
+import org.jetbrains.java.decompiler.modules.decompiler.exps.*;
 import org.jetbrains.java.decompiler.modules.decompiler.sforms.DirectGraph;
 import org.jetbrains.java.decompiler.modules.decompiler.stats.BasicBlockStatement;
 import org.jetbrains.java.decompiler.modules.decompiler.stats.CatchStatement;
@@ -47,6 +18,9 @@ import org.jetbrains.java.decompiler.struct.gen.MethodDescriptor;
 import org.jetbrains.java.decompiler.struct.gen.VarType;
 import org.jetbrains.java.decompiler.util.InterpreterUtil;
 import org.jetbrains.java.decompiler.util.VBStyleCollection;
+
+import java.util.*;
+import java.util.Map.Entry;
 
 public class ClassReference14Processor {
   private static final ExitExprent BODY_EXPR;
@@ -68,10 +42,8 @@ public class ClassReference14Processor {
     ctor.setStringDescriptor("()V");
     ctor.setFunctype(InvocationExprent.TYP_INIT);
     ctor.setDescriptor(MethodDescriptor.parseDescriptor("()V"));
-
     NewExprent newExpr = new NewExprent(new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/NoClassDefFoundError"), new ArrayList<>(), null);
     newExpr.setConstructor(ctor);
-
     InvocationExprent invCause = new InvocationExprent();
     invCause.setName("initCause");
     invCause.setClassname("java/lang/NoClassDefFoundError");
@@ -79,19 +51,19 @@ public class ClassReference14Processor {
     invCause.setDescriptor(MethodDescriptor.parseDescriptor("(Ljava/lang/Throwable;)Ljava/lang/Throwable;"));
     invCause.setInstance(newExpr);
     invCause.setLstParameters(
-        Collections.singletonList(new VarExprent(2, new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/ClassNotFoundException"), null)));
-
+      Collections.singletonList(new VarExprent(2, new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/ClassNotFoundException"), null)));
     HANDLER_EXPR = new ExitExprent(ExitExprent.EXIT_THROW, invCause, null, null);
   }
 
   public static void processClassReferences(ClassNode node) {
     // find the synthetic method Class class$(String) if present
-    HashMap<ClassWrapper, MethodWrapper> mapClassMeths = new HashMap<>();
+    Map<ClassWrapper, MethodWrapper> mapClassMeths = new HashMap<>();
     mapClassMethods(node, mapClassMeths);
     if (mapClassMeths.isEmpty()) {
       return;
     }
-    HashSet<ClassWrapper> setFound = new HashSet<>();
+
+    Set<ClassWrapper> setFound = new HashSet<>();
     processClassRec(node, mapClassMeths, setFound);
 
     if (!setFound.isEmpty()) {
@@ -102,35 +74,29 @@ public class ClassReference14Processor {
     }
   }
 
-  private static void processClassRec(ClassNode node, final HashMap<ClassWrapper, MethodWrapper> mapClassMeths,
-      final HashSet<ClassWrapper> setFound) {
-
-    final ClassWrapper wrapper = node.getWrapper();
+  private static void processClassRec(ClassNode node, Map<ClassWrapper, MethodWrapper> mapClassMeths, Set<? super ClassWrapper> setFound) {
+    ClassWrapper wrapper = node.getWrapper();
 
     // search code
     for (MethodWrapper meth : wrapper.getMethods()) {
-
       RootStatement root = meth.root;
       if (root != null) {
-
         DirectGraph graph = meth.getOrBuildGraph();
-
-        graph.iterateExprents(new DirectGraph.ExprentIterator() {
-          public int processExprent(Exprent exprent) {
-            for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet()) {
-              if (replaceInvocations(exprent, ent.getKey(), ent.getValue())) {
-                setFound.add(ent.getKey());
-              }
+        graph.iterateExprents(exprent -> {
+          for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet()) {
+            if (replaceInvocations(exprent, ent.getKey(), ent.getValue())) {
+              setFound.add(ent.getKey());
             }
-            return 0;
           }
+          return 0;
         });
       }
     }
 
     // search initializers
     for (int j = 0; j < 2; j++) {
-      VBStyleCollection<Exprent, String> initializers = j == 0 ? wrapper.getStaticFieldInitializers() : wrapper.getDynamicFieldInitializers();
+      VBStyleCollection<Exprent, String> initializers =
+        j == 0 ? wrapper.getStaticFieldInitializers() : wrapper.getDynamicFieldInitializers();
 
       for (int i = 0; i < initializers.size(); i++) {
         for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet()) {
@@ -162,21 +128,23 @@ public class ClassReference14Processor {
     for (MethodWrapper method : wrapper.getMethods()) {
       StructMethod mt = method.methodStruct;
 
-      if ((noSynthFlag || mt.isSynthetic()) && mt.getDescriptor().equals("(Ljava/lang/String;)Ljava/lang/Class;")
-          && mt.hasModifier(CodeConstants.ACC_STATIC)) {
+      if ((noSynthFlag || mt.isSynthetic()) &&
+          mt.getDescriptor().equals("(Ljava/lang/String;)Ljava/lang/Class;") &&
+          mt.hasModifier(CodeConstants.ACC_STATIC)) {
 
         RootStatement root = method.root;
         if (root != null && root.getFirst().type == Statement.TYPE_TRYCATCH) {
-          CatchStatement cst = (CatchStatement) root.getFirst();
-          if (cst.getStats().size() == 2 && cst.getFirst().type == Statement.TYPE_BASICBLOCK
-              && cst.getStats().get(1).type == Statement.TYPE_BASICBLOCK
-              && cst.getVars().get(0).getVarType().equals(new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/ClassNotFoundException"))) {
+          CatchStatement cst = (CatchStatement)root.getFirst();
+          if (cst.getStats().size() == 2 && cst.getFirst().type == Statement.TYPE_BASICBLOCK &&
+              cst.getStats().get(1).type == Statement.TYPE_BASICBLOCK &&
+              cst.getVars().get(0).getVarType().equals(new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/ClassNotFoundException"))) {
 
-            BasicBlockStatement body = (BasicBlockStatement) cst.getFirst();
-            BasicBlockStatement handler = (BasicBlockStatement) cst.getStats().get(1);
+            BasicBlockStatement body = (BasicBlockStatement)cst.getFirst();
+            BasicBlockStatement handler = (BasicBlockStatement)cst.getStats().get(1);
 
             if (body.getExprents().size() == 1 && handler.getExprents().size() == 1) {
-              if (BODY_EXPR.equals(body.getExprents().get(0)) && HANDLER_EXPR.equals(handler.getExprents().get(0))) {
+              if (BODY_EXPR.equals(body.getExprents().get(0)) &&
+                  HANDLER_EXPR.equals(handler.getExprents().get(0))) {
                 map.put(wrapper, method);
                 break;
               }
@@ -193,11 +161,9 @@ public class ClassReference14Processor {
   }
 
   private static boolean replaceInvocations(Exprent exprent, ClassWrapper wrapper, MethodWrapper meth) {
-
     boolean res = false;
 
     while (true) {
-
       boolean found = false;
 
       for (Exprent expr : exprent.getAllExprents()) {
@@ -221,38 +187,40 @@ public class ClassReference14Processor {
   }
 
   private static String isClass14Invocation(Exprent exprent, ClassWrapper wrapper, MethodWrapper meth) {
-
     if (exprent.type == Exprent.EXPRENT_FUNCTION) {
-      FunctionExprent fexpr = (FunctionExprent) exprent;
+      FunctionExprent fexpr = (FunctionExprent)exprent;
       if (fexpr.getFuncType() == FunctionExprent.FUNCTION_IIF) {
         if (fexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FUNCTION) {
-          FunctionExprent headexpr = (FunctionExprent) fexpr.getLstOperands().get(0);
+          FunctionExprent headexpr = (FunctionExprent)fexpr.getLstOperands().get(0);
           if (headexpr.getFuncType() == FunctionExprent.FUNCTION_EQ) {
-            if (headexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FIELD && headexpr.getLstOperands().get(1).type == Exprent.EXPRENT_CONST
-                && ((ConstExprent) headexpr.getLstOperands().get(1)).getConstType().equals(VarType.VARTYPE_NULL)) {
+            if (headexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FIELD &&
+                headexpr.getLstOperands().get(1).type == Exprent.EXPRENT_CONST &&
+                ((ConstExprent)headexpr.getLstOperands().get(1)).getConstType().equals(VarType.VARTYPE_NULL)) {
 
-              FieldExprent field = (FieldExprent) headexpr.getLstOperands().get(0);
+              FieldExprent field = (FieldExprent)headexpr.getLstOperands().get(0);
               ClassNode fieldnode = DecompilerContext.getClassProcessor().getMapRootClasses().get(field.getClassname());
 
               if (fieldnode != null && fieldnode.classStruct.qualifiedName.equals(wrapper.getClassStruct().qualifiedName)) { // source class
-                StructField fd = wrapper.getClassStruct().getField(field.getName(), field.getDescriptor().descriptorString); // FIXME: can be null! why??
+                StructField fd =
+                  wrapper.getClassStruct().getField(field.getName(), field.getDescriptor().descriptorString);  // FIXME: can be null! why??
 
-                if (fd != null && fd.hasModifier(CodeConstants.ACC_STATIC)
-                    && (fd.isSynthetic() || DecompilerContext.getOption(IFernflowerPreferences.SYNTHETIC_NOT_SET))) {
+                if (fd != null && fd.hasModifier(CodeConstants.ACC_STATIC) &&
+                    (fd.isSynthetic() || DecompilerContext.getOption(IFernflowerPreferences.SYNTHETIC_NOT_SET))) {
 
                   if (fexpr.getLstOperands().get(1).type == Exprent.EXPRENT_ASSIGNMENT && fexpr.getLstOperands().get(2).equals(field)) {
-                    AssignmentExprent asexpr = (AssignmentExprent) fexpr.getLstOperands().get(1);
+                    AssignmentExprent asexpr = (AssignmentExprent)fexpr.getLstOperands().get(1);
 
                     if (asexpr.getLeft().equals(field) && asexpr.getRight().type == Exprent.EXPRENT_INVOCATION) {
-                      InvocationExprent invexpr = (InvocationExprent) asexpr.getRight();
+                      InvocationExprent invexpr = (InvocationExprent)asexpr.getRight();
 
-                      if (invexpr.getClassname().equals(wrapper.getClassStruct().qualifiedName)
-                          && invexpr.getName().equals(meth.methodStruct.getName())
-                          && invexpr.getStringDescriptor().equals(meth.methodStruct.getDescriptor())) {
+                      if (invexpr.getClassname().equals(wrapper.getClassStruct().qualifiedName) &&
+                          invexpr.getName().equals(meth.methodStruct.getName()) &&
+                          invexpr.getStringDescriptor().equals(meth.methodStruct.getDescriptor())) {
 
                         if (invexpr.getLstParameters().get(0).type == Exprent.EXPRENT_CONST) {
-                          wrapper.getHiddenMembers().add(InterpreterUtil.makeUniqueKey(fd.getName(), fd.getDescriptor())); // hide synthetic field
-                          return ((ConstExprent) invexpr.getLstParameters().get(0)).getValue().toString();
+                          wrapper.getHiddenMembers()
+                            .add(InterpreterUtil.makeUniqueKey(fd.getName(), fd.getDescriptor()));  // hide synthetic field
+                          return ((ConstExprent)invexpr.getLstParameters().get(0)).getValue().toString();
                         }
                       }
                     }
