@@ -1,38 +1,13 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.java.decompiler.modules.decompiler.sforms;
-
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
 
 import org.jetbrains.java.decompiler.modules.decompiler.StatEdge;
 import org.jetbrains.java.decompiler.modules.decompiler.exps.Exprent;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.BasicBlockStatement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.CatchAllStatement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.DoStatement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.IfStatement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.RootStatement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.Statement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.SwitchStatement;
-import org.jetbrains.java.decompiler.modules.decompiler.stats.SynchronizedStatement;
+import org.jetbrains.java.decompiler.modules.decompiler.stats.*;
+
+import java.util.*;
+import java.util.Map.Entry;
+
 
 public class FlattenStatementsHelper {
 
@@ -68,7 +43,7 @@ public class FlattenStatementsHelper {
     DirectNode node = new DirectNode(DirectNode.NODE_DIRECT, dummyexit, dummyexit.id.toString());
     node.exprents = new ArrayList<>();
     graph.nodes.addWithKey(node, node.id);
-    mapDestinationNodes.put(dummyexit.id, new String[] { node.id, null });
+    mapDestinationNodes.put(dummyexit.id, new String[]{node.id, null});
 
     setEdges();
 
@@ -81,15 +56,15 @@ public class FlattenStatementsHelper {
   private void flattenStatement() {
 
     class StatementStackEntry {
-      public Statement statement;
-      public LinkedList<StackEntry> stackFinally;
-      public List<Exprent> tailExprents;
+      public final Statement statement;
+      public final LinkedList<StackEntry> stackFinally;
+      public final List<Exprent> tailExprents;
 
       public int statementIndex;
       public int edgeIndex;
       public List<StatEdge> succEdges;
 
-      public StatementStackEntry(Statement statement, LinkedList<StackEntry> stackFinally, List<Exprent> tailExprents) {
+      StatementStackEntry(Statement statement, LinkedList<StackEntry> stackFinally, List<Exprent> tailExprents) {
         this.statement = statement;
         this.stackFinally = stackFinally;
         this.tailExprents = tailExprents;
@@ -100,7 +75,8 @@ public class FlattenStatementsHelper {
 
     lstStackStatements.add(new StatementStackEntry(root, new LinkedList<>(), null));
 
-    mainloop: while (!lstStackStatements.isEmpty()) {
+    mainloop:
+    while (!lstStackStatements.isEmpty()) {
 
       StatementStackEntry statEntry = lstStackStatements.removeFirst();
 
@@ -116,192 +92,192 @@ public class FlattenStatementsHelper {
       if (statEntry.succEdges == null) {
 
         switch (stat.type) {
-        case Statement.TYPE_BASICBLOCK:
-          node = new DirectNode(DirectNode.NODE_DIRECT, stat, (BasicBlockStatement) stat);
-          if (stat.getExprents() != null) {
-            node.exprents = stat.getExprents();
-          }
-          graph.nodes.putWithKey(node, node.id);
-          mapDestinationNodes.put(stat.id, new String[] { node.id, null });
-
-          lstSuccEdges.addAll(stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL));
-          sourcenode = node;
-
-          List<Exprent> tailExprentList = statEntry.tailExprents;
-
-          if (tailExprentList != null) {
-            DirectNode tail = new DirectNode(DirectNode.NODE_TAIL, stat, stat.id + "_tail");
-            tail.exprents = tailExprentList;
-            graph.nodes.putWithKey(tail, tail.id);
-
-            mapDestinationNodes.put(-stat.id, new String[] { tail.id, null });
-            listEdges.add(new Edge(node.id, -stat.id, StatEdge.TYPE_REGULAR));
-
-            sourcenode = tail;
-          }
-
-          // 'if' statement: record positive branch
-          if (stat.getLastBasicType() == Statement.LASTBASICTYPE_IF) {
-            mapPosIfBranch.put(sourcenode.id, lstSuccEdges.get(0).getDestination().id);
-          }
-
-          break;
-        case Statement.TYPE_CATCHALL:
-        case Statement.TYPE_TRYCATCH:
-          DirectNode firstnd = new DirectNode(DirectNode.NODE_TRY, stat, stat.id + "_try");
-
-          mapDestinationNodes.put(stat.id, new String[] { firstnd.id, null });
-          graph.nodes.putWithKey(firstnd, firstnd.id);
-
-          LinkedList<StatementStackEntry> lst = new LinkedList<>();
-
-          for (Statement st : stat.getStats()) {
-            listEdges.add(new Edge(firstnd.id, st.id, StatEdge.TYPE_REGULAR));
-
-            LinkedList<StackEntry> stack = stackFinally;
-            if (stat.type == Statement.TYPE_CATCHALL && ((CatchAllStatement) stat).isFinally()) {
-              stack = new LinkedList<>(stackFinally);
-
-              if (st == stat.getFirst()) { // catch head
-                stack.add(new StackEntry((CatchAllStatement) stat, Boolean.FALSE));
-              } else { // handler
-                stack.add(
-                    new StackEntry((CatchAllStatement) stat, Boolean.TRUE, StatEdge.TYPE_BREAK, root.getDummyExit(), st, st, firstnd, firstnd, true));
-              }
+          case Statement.TYPE_BASICBLOCK:
+            node = new DirectNode(DirectNode.NODE_DIRECT, stat, (BasicBlockStatement)stat);
+            if (stat.getExprents() != null) {
+              node.exprents = stat.getExprents();
             }
-            lst.add(new StatementStackEntry(st, stack, null));
-          }
-
-          lstStackStatements.addAll(0, lst);
-          break;
-        case Statement.TYPE_DO:
-          if (statementBreakIndex == 0) {
-            statEntry.statementIndex = 1;
-            lstStackStatements.addFirst(statEntry);
-            lstStackStatements.addFirst(new StatementStackEntry(stat.getFirst(), stackFinally, null));
-
-            continue mainloop;
-          }
-
-          nd = graph.nodes.getWithKey(mapDestinationNodes.get(stat.getFirst().id)[0]);
-
-          DoStatement dostat = (DoStatement) stat;
-          int looptype = dostat.getLooptype();
-
-          if (looptype == DoStatement.LOOP_DO) {
-            mapDestinationNodes.put(stat.id, new String[] { nd.id, nd.id });
-            break;
-          }
-
-          lstSuccEdges.add(stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL).get(0)); // exactly one edge
-
-          switch (looptype) {
-          case DoStatement.LOOP_WHILE:
-          case DoStatement.LOOP_DOWHILE:
-            node = new DirectNode(DirectNode.NODE_CONDITION, stat, stat.id + "_cond");
-            node.exprents = dostat.getConditionExprentList();
             graph.nodes.putWithKey(node, node.id);
+            mapDestinationNodes.put(stat.id, new String[]{node.id, null});
 
-            listEdges.add(new Edge(node.id, stat.getFirst().id, StatEdge.TYPE_REGULAR));
+            lstSuccEdges.addAll(stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL));
+            sourcenode = node;
 
-            if (looptype == DoStatement.LOOP_WHILE) {
-              mapDestinationNodes.put(stat.id, new String[] { node.id, node.id });
-            } else {
-              mapDestinationNodes.put(stat.id, new String[] { nd.id, node.id });
+            List<Exprent> tailExprentList = statEntry.tailExprents;
 
-              boolean found = false;
-              for (Edge edge : listEdges) {
-                if (edge.statid.equals(stat.id) && edge.edgetype == StatEdge.TYPE_CONTINUE) {
-                  found = true;
-                  break;
+            if (tailExprentList != null) {
+              DirectNode tail = new DirectNode(DirectNode.NODE_TAIL, stat, stat.id + "_tail");
+              tail.exprents = tailExprentList;
+              graph.nodes.putWithKey(tail, tail.id);
+
+              mapDestinationNodes.put(-stat.id, new String[]{tail.id, null});
+              listEdges.add(new Edge(node.id, -stat.id, StatEdge.TYPE_REGULAR));
+
+              sourcenode = tail;
+            }
+
+            // 'if' statement: record positive branch
+            if (stat.getLastBasicType() == Statement.LASTBASICTYPE_IF) {
+              mapPosIfBranch.put(sourcenode.id, lstSuccEdges.get(0).getDestination().id);
+            }
+
+            break;
+          case Statement.TYPE_CATCHALL:
+          case Statement.TYPE_TRYCATCH:
+            DirectNode firstnd = new DirectNode(DirectNode.NODE_TRY, stat, stat.id + "_try");
+
+            mapDestinationNodes.put(stat.id, new String[]{firstnd.id, null});
+            graph.nodes.putWithKey(firstnd, firstnd.id);
+
+            LinkedList<StatementStackEntry> lst = new LinkedList<>();
+
+            for (Statement st : stat.getStats()) {
+              listEdges.add(new Edge(firstnd.id, st.id, StatEdge.TYPE_REGULAR));
+
+              LinkedList<StackEntry> stack = stackFinally;
+              if (stat.type == Statement.TYPE_CATCHALL && ((CatchAllStatement)stat).isFinally()) {
+                stack = new LinkedList<>(stackFinally);
+
+                if (st == stat.getFirst()) { // catch head
+                  stack.add(new StackEntry((CatchAllStatement)stat, Boolean.FALSE));
+                }
+                else { // handler
+                  stack.add(new StackEntry((CatchAllStatement)stat, Boolean.TRUE, StatEdge.TYPE_BREAK,
+                                           root.getDummyExit(), st, st, firstnd, firstnd, true));
                 }
               }
-              if (!found) {
-                listEdges.add(new Edge(nd.id, stat.id, StatEdge.TYPE_CONTINUE));
-              }
+              lst.add(new StatementStackEntry(st, stack, null));
             }
-            sourcenode = node;
+
+            lstStackStatements.addAll(0, lst);
             break;
-          case DoStatement.LOOP_FOR:
-            DirectNode nodeinit = new DirectNode(DirectNode.NODE_INIT, stat, stat.id + "_init");
-            if (dostat.getInitExprent() != null) {
-              nodeinit.exprents = dostat.getInitExprentList();
-            }
-            graph.nodes.putWithKey(nodeinit, nodeinit.id);
-
-            DirectNode nodecond = new DirectNode(DirectNode.NODE_CONDITION, stat, stat.id + "_cond");
-            nodecond.exprents = dostat.getConditionExprentList();
-            graph.nodes.putWithKey(nodecond, nodecond.id);
-
-            DirectNode nodeinc = new DirectNode(DirectNode.NODE_INCREMENT, stat, stat.id + "_inc");
-            nodeinc.exprents = dostat.getIncExprentList();
-            graph.nodes.putWithKey(nodeinc, nodeinc.id);
-
-            mapDestinationNodes.put(stat.id, new String[] { nodeinit.id, nodeinc.id });
-            mapDestinationNodes.put(-stat.id, new String[] { nodecond.id, null });
-
-            listEdges.add(new Edge(nodecond.id, stat.getFirst().id, StatEdge.TYPE_REGULAR));
-            listEdges.add(new Edge(nodeinit.id, -stat.id, StatEdge.TYPE_REGULAR));
-            listEdges.add(new Edge(nodeinc.id, -stat.id, StatEdge.TYPE_REGULAR));
-
-            boolean found = false;
-            for (Edge edge : listEdges) {
-              if (edge.statid.equals(stat.id) && edge.edgetype == StatEdge.TYPE_CONTINUE) {
-                found = true;
-                break;
-              }
-            }
-            if (!found) {
-              listEdges.add(new Edge(nd.id, stat.id, StatEdge.TYPE_CONTINUE));
-            }
-
-            sourcenode = nodecond;
-          }
-          break;
-        case Statement.TYPE_SYNCRONIZED:
-        case Statement.TYPE_SWITCH:
-        case Statement.TYPE_IF:
-        case Statement.TYPE_SEQUENCE:
-        case Statement.TYPE_ROOT:
-          int statsize = stat.getStats().size();
-          if (stat.type == Statement.TYPE_SYNCRONIZED) {
-            statsize = 2; // exclude the handler if synchronized
-          }
-
-          if (statementBreakIndex <= statsize) {
-            List<Exprent> tailexprlst = null;
-
-            switch (stat.type) {
-            case Statement.TYPE_SYNCRONIZED:
-              tailexprlst = ((SynchronizedStatement) stat).getHeadexprentList();
-              break;
-            case Statement.TYPE_SWITCH:
-              tailexprlst = ((SwitchStatement) stat).getHeadexprentList();
-              break;
-            case Statement.TYPE_IF:
-              tailexprlst = ((IfStatement) stat).getHeadexprentList();
-            }
-
-            for (int i = statementBreakIndex; i < statsize; i++) {
-              statEntry.statementIndex = i + 1;
+          case Statement.TYPE_DO:
+            if (statementBreakIndex == 0) {
+              statEntry.statementIndex = 1;
               lstStackStatements.addFirst(statEntry);
-              lstStackStatements.addFirst(new StatementStackEntry(stat.getStats().get(i), stackFinally,
-                  (i == 0 && tailexprlst != null && tailexprlst.get(0) != null) ? tailexprlst : null));
+              lstStackStatements.addFirst(new StatementStackEntry(stat.getFirst(), stackFinally, null));
 
               continue mainloop;
             }
 
-            if (graph.nodes.isEmpty()) {
+            nd = graph.nodes.getWithKey(mapDestinationNodes.get(stat.getFirst().id)[0]);
+
+            DoStatement dostat = (DoStatement)stat;
+            int looptype = dostat.getLooptype();
+
+            if (looptype == DoStatement.LOOP_DO) {
+              mapDestinationNodes.put(stat.id, new String[]{nd.id, nd.id});
               break;
             }
-            node = graph.nodes.getWithKey(mapDestinationNodes.get(stat.getFirst().id)[0]);
-            mapDestinationNodes.put(stat.id, new String[] { node.id, null });
 
-            if (stat.type == Statement.TYPE_IF && ((IfStatement) stat).iftype == IfStatement.IFTYPE_IF) {
-              lstSuccEdges.add(stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL).get(0)); // exactly one edge
-              sourcenode = tailexprlst.get(0) == null ? node : graph.nodes.getWithKey(node.id + "_tail");
+            lstSuccEdges.add(stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL).get(0));  // exactly one edge
+
+            switch (looptype) {
+              case DoStatement.LOOP_WHILE:
+              case DoStatement.LOOP_DOWHILE:
+                node = new DirectNode(DirectNode.NODE_CONDITION, stat, stat.id + "_cond");
+                node.exprents = dostat.getConditionExprentList();
+                graph.nodes.putWithKey(node, node.id);
+
+                listEdges.add(new Edge(node.id, stat.getFirst().id, StatEdge.TYPE_REGULAR));
+
+                if (looptype == DoStatement.LOOP_WHILE) {
+                  mapDestinationNodes.put(stat.id, new String[]{node.id, node.id});
+                }
+                else {
+                  mapDestinationNodes.put(stat.id, new String[]{nd.id, node.id});
+
+                  boolean found = false;
+                  for (Edge edge : listEdges) {
+                    if (edge.statid.equals(stat.id) && edge.edgetype == StatEdge.TYPE_CONTINUE) {
+                      found = true;
+                      break;
+                    }
+                  }
+                  if (!found) {
+                    listEdges.add(new Edge(nd.id, stat.id, StatEdge.TYPE_CONTINUE));
+                  }
+                }
+                sourcenode = node;
+                break;
+              case DoStatement.LOOP_FOR:
+                DirectNode nodeinit = new DirectNode(DirectNode.NODE_INIT, stat, stat.id + "_init");
+                if (dostat.getInitExprent() != null) {
+                  nodeinit.exprents = dostat.getInitExprentList();
+                }
+                graph.nodes.putWithKey(nodeinit, nodeinit.id);
+
+                DirectNode nodecond = new DirectNode(DirectNode.NODE_CONDITION, stat, stat.id + "_cond");
+                nodecond.exprents = dostat.getConditionExprentList();
+                graph.nodes.putWithKey(nodecond, nodecond.id);
+
+                DirectNode nodeinc = new DirectNode(DirectNode.NODE_INCREMENT, stat, stat.id + "_inc");
+                nodeinc.exprents = dostat.getIncExprentList();
+                graph.nodes.putWithKey(nodeinc, nodeinc.id);
+
+                mapDestinationNodes.put(stat.id, new String[]{nodeinit.id, nodeinc.id});
+                mapDestinationNodes.put(-stat.id, new String[]{nodecond.id, null});
+
+                listEdges.add(new Edge(nodecond.id, stat.getFirst().id, StatEdge.TYPE_REGULAR));
+                listEdges.add(new Edge(nodeinit.id, -stat.id, StatEdge.TYPE_REGULAR));
+                listEdges.add(new Edge(nodeinc.id, -stat.id, StatEdge.TYPE_REGULAR));
+
+                boolean found = false;
+                for (Edge edge : listEdges) {
+                  if (edge.statid.equals(stat.id) && edge.edgetype == StatEdge.TYPE_CONTINUE) {
+                    found = true;
+                    break;
+                  }
+                }
+                if (!found) {
+                  listEdges.add(new Edge(nd.id, stat.id, StatEdge.TYPE_CONTINUE));
+                }
+
+                sourcenode = nodecond;
             }
-          }
+            break;
+          case Statement.TYPE_SYNCRONIZED:
+          case Statement.TYPE_SWITCH:
+          case Statement.TYPE_IF:
+          case Statement.TYPE_SEQUENCE:
+          case Statement.TYPE_ROOT:
+            int statsize = stat.getStats().size();
+            if (stat.type == Statement.TYPE_SYNCRONIZED) {
+              statsize = 2;  // exclude the handler if synchronized
+            }
+
+            if (statementBreakIndex <= statsize) {
+              List<Exprent> tailexprlst = null;
+
+              switch (stat.type) {
+                case Statement.TYPE_SYNCRONIZED:
+                  tailexprlst = ((SynchronizedStatement)stat).getHeadexprentList();
+                  break;
+                case Statement.TYPE_SWITCH:
+                  tailexprlst = ((SwitchStatement)stat).getHeadexprentList();
+                  break;
+                case Statement.TYPE_IF:
+                  tailexprlst = ((IfStatement)stat).getHeadexprentList();
+              }
+
+              for (int i = statementBreakIndex; i < statsize; i++) {
+                statEntry.statementIndex = i + 1;
+                lstStackStatements.addFirst(statEntry);
+                lstStackStatements.addFirst(
+                  new StatementStackEntry(stat.getStats().get(i), stackFinally,
+                                          (i == 0 && tailexprlst != null && tailexprlst.get(0) != null) ? tailexprlst : null));
+
+                continue mainloop;
+              }
+
+              node = graph.nodes.getWithKey(mapDestinationNodes.get(stat.getFirst().id)[0]);
+              mapDestinationNodes.put(stat.id, new String[]{node.id, null});
+
+              if (stat.type == Statement.TYPE_IF && ((IfStatement)stat).iftype == IfStatement.IFTYPE_IF) {
+                lstSuccEdges.add(stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL).get(0));  // exactly one edge
+                sourcenode = tailexprlst.get(0) == null ? node : graph.nodes.getWithKey(node.id + "_tail");
+              }
+            }
         }
       }
 
@@ -341,8 +317,9 @@ public class FlattenStatementsHelper {
 
             if (entry == null) {
               saveEdge(sourcenode, destination, edgetype, isFinallyExit ? finallyShortRangeSource : null, finallyLongRangeSource,
-                  finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
-            } else {
+                       finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
+            }
+            else {
 
               CatchAllStatement catchall = entry.catchstatement;
 
@@ -362,23 +339,27 @@ public class FlattenStatementsHelper {
                   isFinallyMonitorExceptionPath = (catchall.getMonitor() != null) & entry.isFinallyExceptionPath;
 
                   created = false;
-                } else {
+                }
+                else {
                   if (!catchall.containsStatementStrict(destination)) {
                     stack.removeLast();
                     created = false;
-                  } else {
+                  }
+                  else {
                     saveEdge(sourcenode, destination, edgetype, isFinallyExit ? finallyShortRangeSource : null, finallyLongRangeSource,
-                        finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
+                             finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
                   }
                 }
-              } else { // finally protected try statement
+              }
+              else { // finally protected try statement
                 if (!catchall.containsStatementStrict(destination)) {
                   saveEdge(sourcenode, catchall.getHandler(), StatEdge.TYPE_REGULAR, isFinallyExit ? finallyShortRangeSource : null,
-                      finallyLongRangeSource, finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
+                           finallyLongRangeSource, finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
 
                   stack.removeLast();
                   stack.add(new StackEntry(catchall, Boolean.TRUE, edgetype, destination, catchall.getHandler(),
-                      finallyLongRangeEntry == null ? catchall.getHandler() : finallyLongRangeEntry, sourcenode, finallyLongRangeSource, false));
+                                           finallyLongRangeEntry == null ? catchall.getHandler() : finallyLongRangeEntry,
+                                           sourcenode, finallyLongRangeSource, false));
 
                   statEntry.edgeIndex = edgeindex + 1;
                   statEntry.succEdges = lstSuccEdges;
@@ -386,9 +367,10 @@ public class FlattenStatementsHelper {
                   lstStackStatements.addFirst(new StatementStackEntry(catchall.getHandler(), stack, null));
 
                   continue mainloop;
-                } else {
+                }
+                else {
                   saveEdge(sourcenode, destination, edgetype, isFinallyExit ? finallyShortRangeSource : null, finallyLongRangeSource,
-                      finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
+                           finallyShortRangeEntry, finallyLongRangeEntry, isFinallyMonitorExceptionPath);
                 }
               }
             }
@@ -402,30 +384,34 @@ public class FlattenStatementsHelper {
     }
   }
 
-  private void saveEdge(DirectNode sourcenode, Statement destination, int edgetype, DirectNode finallyShortRangeSource,
-      DirectNode finallyLongRangeSource, Statement finallyShortRangeEntry, Statement finallyLongRangeEntry, boolean isFinallyMonitorExceptionPath) {
+  private void saveEdge(DirectNode sourcenode,
+                        Statement destination,
+                        int edgetype,
+                        DirectNode finallyShortRangeSource,
+                        DirectNode finallyLongRangeSource,
+                        Statement finallyShortRangeEntry,
+                        Statement finallyLongRangeEntry,
+                        boolean isFinallyMonitorExceptionPath) {
 
     if (edgetype != StatEdge.TYPE_FINALLYEXIT) {
       listEdges.add(new Edge(sourcenode.id, destination.id, edgetype));
     }
 
     if (finallyShortRangeSource != null) {
-
       boolean isContinueEdge = (edgetype == StatEdge.TYPE_CONTINUE);
 
-      List<String[]> lst = mapShortRangeFinallyPathIds.get(sourcenode.id);
-      if (lst == null) {
-        mapShortRangeFinallyPathIds.put(sourcenode.id, lst = new ArrayList<>());
-      }
-      lst.add(new String[] { finallyShortRangeSource.id, destination.id.toString(), finallyShortRangeEntry.id.toString(),
-          isFinallyMonitorExceptionPath ? "1" : null, isContinueEdge ? "1" : null });
+      mapShortRangeFinallyPathIds.computeIfAbsent(sourcenode.id, k -> new ArrayList<>()).add(new String[]{
+        finallyShortRangeSource.id,
+        destination.id.toString(),
+        finallyShortRangeEntry.id.toString(),
+        isFinallyMonitorExceptionPath ? "1" : null,
+        isContinueEdge ? "1" : null});
 
-      lst = mapLongRangeFinallyPathIds.get(sourcenode.id);
-      if (lst == null) {
-        mapLongRangeFinallyPathIds.put(sourcenode.id, lst = new ArrayList<>());
-      }
-      lst.add(
-          new String[] { finallyLongRangeSource.id, destination.id.toString(), finallyLongRangeEntry.id.toString(), isContinueEdge ? "1" : null });
+      mapLongRangeFinallyPathIds.computeIfAbsent(sourcenode.id, k -> new ArrayList<>()).add(new String[]{
+        finallyLongRangeSource.id,
+        destination.id.toString(),
+        finallyLongRangeEntry.id.toString(),
+        isContinueEdge ? "1" : null});
     }
   }
 
@@ -474,7 +460,9 @@ public class FlattenStatementsHelper {
         }
 
         if (!newLst.isEmpty()) {
-          (i == 0 ? graph.mapShortRangeFinallyPaths : graph.mapLongRangeFinallyPaths).put(ent.getKey(), new ArrayList<>(new HashSet<>(newLst)));
+          (i == 0 ? graph.mapShortRangeFinallyPaths : graph.mapLongRangeFinallyPaths).put(ent.getKey(),
+                                                                                          new ArrayList<>(
+                                                                                            new HashSet<>(newLst)));
         }
       }
     }
@@ -497,12 +485,10 @@ public class FlattenStatementsHelper {
 
     @Override
     public boolean equals(Object o) {
-      if (o == this)
-        return true;
-      if (o == null || !(o instanceof FinallyPathWrapper))
-        return false;
+      if (o == this) return true;
+      if (!(o instanceof FinallyPathWrapper)) return false;
 
-      FinallyPathWrapper fpw = (FinallyPathWrapper) o;
+      FinallyPathWrapper fpw = (FinallyPathWrapper)o;
       return (source + ":" + destination + ":" + entry).equals(fpw.source + ":" + fpw.destination + ":" + fpw.entry);
     }
 
@@ -517,6 +503,7 @@ public class FlattenStatementsHelper {
     }
   }
 
+
   private static class StackEntry {
 
     public final CatchAllStatement catchstatement;
@@ -530,8 +517,15 @@ public class FlattenStatementsHelper {
     public final DirectNode finallyShortRangeSource;
     public final DirectNode finallyLongRangeSource;
 
-    public StackEntry(CatchAllStatement catchstatement, boolean state, int edgetype, Statement destination, Statement finallyShortRangeEntry,
-        Statement finallyLongRangeEntry, DirectNode finallyShortRangeSource, DirectNode finallyLongRangeSource, boolean isFinallyExceptionPath) {
+    StackEntry(CatchAllStatement catchstatement,
+                      boolean state,
+                      int edgetype,
+                      Statement destination,
+                      Statement finallyShortRangeEntry,
+                      Statement finallyLongRangeEntry,
+                      DirectNode finallyShortRangeSource,
+                      DirectNode finallyLongRangeSource,
+                      boolean isFinallyExceptionPath) {
 
       this.catchstatement = catchstatement;
       this.state = state;
@@ -545,7 +539,7 @@ public class FlattenStatementsHelper {
       this.finallyLongRangeSource = finallyLongRangeSource;
     }
 
-    public StackEntry(CatchAllStatement catchstatement, boolean state) {
+    StackEntry(CatchAllStatement catchstatement, boolean state) {
       this(catchstatement, state, -1, null, null, null, null, null, false);
     }
   }
@@ -555,7 +549,7 @@ public class FlattenStatementsHelper {
     public final Integer statid;
     public final int edgetype;
 
-    public Edge(String sourceid, Integer statid, int edgetype) {
+    Edge(String sourceid, Integer statid, int edgetype) {
       this.sourceid = sourceid;
       this.statid = statid;
       this.edgetype = edgetype;
